k8s/homelab/apps/frigate/resources/rtsp.yaml
apiVersion: v1
kind: Service
metadata:
  name: frigate-rtsp
  namespace: frigate
  labels:
    app.kubernetes.io/name: frigate
    app.kubernetes.io/instance: frigate
  annotations:
    lbipam.cilium.io/sharing-key: sharing-10.10.100.10
    lbipam.cilium.io/sharing-cross-namespace: 'kube-system,frigate'
spec:
  type: LoadBalancer
  ports:
    - name: rtsp
      port: 8554
      targetPort: rtsp
      protocol: TCP
  selector:
    app.kubernetes.io/name: frigate
    app.kubernetes.io/instance: frigate
  loadBalancerIP: 10.10.100.10
