k8s/homelab/apps/frigate/resources/webrtc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frigate-webrtc
  namespace: frigate
  labels:
    app.kubernetes.io/name: frigate
    app.kubernetes.io/instance: frigate
  annotations:
    tailscale.com/expose: "true"
spec:
  type: LoadBalancer
  ports:
    - name: webrtc-udp
      port: 8555
      targetPort: webrtc-udp
      protocol: UDP
    - name: webrtc-tcp
      port: 8555
      targetPort: webrtc-tcp
      protocol: TCP
  loadBalancerIP: 10.10.100.2
  selector:
    app.kubernetes.io/name: frigate
    app.kubernetes.io/instance: frigate
