k8s/homelab/apps/frigate/resources/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frigate
spec:
  parentRefs:
    - namespace: envoy-gateway-system
      name: gateway-local
    - namespace: envoy-gateway-system
      name: gateway-tailscale
  hostnames:
    - frigate.hs.liquid.sh
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          namespace: frigate
          name: frigate
          port: 8971
